# finetune-llm

./: README.md  config.py  data_prep.py  model_prep.py  model_save.py  prompts.py  pyproject.toml  test.py  train.py
.devcontainer/: devcontainer.json
model_config/: config_llama3_openko_8b.yaml
